mach-msm: Use PMEM ADSP for camera and ION camera heap for video encoder/decoder
These changes, made on Ariesve, Ancora, Ancora_Tmo, Apache boards,
allow to use PMEM ADSP heap for camera driver and ION camera heap
for video encoder/decoder driver.

--- a/arch/arm/configs/ariesve_defconfig
+++ b/arch/arm/configs/ariesve_defconfig
@@ -491,6 +491,7 @@ CONFIG_MSM_SHOW_RESUME_IRQ=y
 CONFIG_MSM_SPM_V1=y
 # CONFIG_MSM_SPM_V2 is not set
 CONFIG_MSM_MULTIMEDIA_USE_ION=y
+CONFIG_MSM_ADSP_USE_PMEM=y
 # CONFIG_MSM_OCMEM is not set
 # CONFIG_MSM_RTB is not set
 # CONFIG_MSM_EBI_ERP is not set
