--- a/arch/arm/configs/apache_defconfig
+++ b/arch/arm/configs/apache_defconfig
@@ -492,6 +492,7 @@ CONFIG_VP_A2220=y
 CONFIG_MSM_SPM_V1=y
 # CONFIG_MSM_SPM_V2 is not set
 CONFIG_MSM_MULTIMEDIA_USE_ION=y
+CONFIG_MSM_ADSP_USE_PMEM=y
 # CONFIG_MSM_OCMEM is not set
 # CONFIG_MSM_RTB is not set
 # CONFIG_MSM_EBI_ERP is not set
