--- a/arch/arm/configs/ancora_defconfig
+++ b/arch/arm/configs/ancora_defconfig
@@ -1,8 +1,9 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.56 Kernel Configuration
+# Linux/arm 3.4.61 Kernel Configuration
 #
 CONFIG_ARM=y
+CONFIG_ARM_HAS_SG_CHAIN=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
 CONFIG_GENERIC_GPIO=y
 # CONFIG_ARCH_USES_GETTIMEOFFSET is not set
@@ -27,6 +28,7 @@ CONFIG_NEED_MACH_IO_H=y
 CONFIG_NEED_MACH_MEMORY_H=y
 CONFIG_PHYS_OFFSET=0x00400000
 CONFIG_GENERIC_BUG=y
+# CONFIG_ARCH_RANDOM is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
@@ -208,11 +210,11 @@ CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_ROW=y
-# CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_ROW is not set
+CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="row"
+CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
