Update defconfigs for ZRAM (as module) and ZSMALLOC

--- a/arch/arm/configs/ancora_defconfig
+++ b/arch/arm/configs/ancora_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.73 Kernel Configuration
+# Linux/arm 3.4.74 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -611,7 +611,7 @@ CONFIG_VIRT_TO_BUS=y
 CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_NEED_PER_CPU_KM=y
-# CONFIG_CLEANCACHE is not set
+CONFIG_CLEANCACHE=y
 # CONFIG_ARCH_MEMORY_PROBE is not set
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ENABLE_DMM is not set
@@ -2890,6 +2890,10 @@ CONFIG_STAGING=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
+CONFIG_ZRAM=m
+# CONFIG_ZRAM_DEBUG is not set
+# CONFIG_QCACHE is not set
+CONFIG_ZSMALLOC=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
@@ -2900,6 +2904,7 @@ CONFIG_STAGING=y
 #
 # CONFIG_SPEAKUP is not set
 # CONFIG_TOUCHSCREEN_CLEARPAD_TM1217 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4_STAGING is not set
 # CONFIG_STAGING_MEDIA is not set
 
 #
