--- a/arch/arm/configs/ariesve_defconfig
+++ b/arch/arm/configs/ariesve_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.74 Kernel Configuration
+# Linux/arm 3.4.75 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -29,6 +29,7 @@ CONFIG_NEED_MACH_MEMORY_H=y
 CONFIG_PHYS_OFFSET=0x00400000
 CONFIG_GENERIC_BUG=y
 # CONFIG_ARCH_RANDOM is not set
+# CONFIG_GENERIC_TIME_VSYSCALL is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
@@ -473,7 +474,7 @@ CONFIG_SCORPION_Uni_45nm_BUG=y
 CONFIG_MSM_GPIOMUX=y
 CONFIG_MSM_MODEM_RESTART=y
 CONFIG_MSM_PM2=y
-# CONFIG_MSM_EVENT_TIMER is not set
+CONFIG_MSM_EVENT_TIMER=y
 # CONFIG_MSM_BUS_SCALING is not set
 # CONFIG_MSM_WATCHDOG_V2 is not set
 # CONFIG_MSM_MEMORY_DUMP is not set
@@ -537,6 +538,7 @@ CONFIG_ARM_THUMB=y
 # CONFIG_CPU_DCACHE_DISABLE is not set
 # CONFIG_CPU_CACHE_ERR_REPORT is not set
 # CONFIG_CPU_BPREDICT_DISABLE is not set
+CONFIG_KUSER_HELPERS=y
 # CONFIG_CACHE_L2X0 is not set
 CONFIG_ARM_L1_CACHE_SHIFT_6=y
 CONFIG_ARM_L1_CACHE_SHIFT=6
@@ -611,10 +613,13 @@ CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_NEED_PER_CPU_KM=y
 CONFIG_CLEANCACHE=y
+# CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 # CONFIG_ARCH_MEMORY_PROBE is not set
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ENABLE_DMM is not set
 # CONFIG_DONT_MAP_HOLE_AFTER_MEMBANK0 is not set
+CONFIG_ENABLE_VMALLOC_SAVING=y
+# CONFIG_NO_VM_RECLAIM is not set
 CONFIG_HOLES_IN_ZONE=y
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
@@ -2870,6 +2875,7 @@ CONFIG_STAGING=y
 # CONFIG_IIO is not set
 CONFIG_ZRAM=m
 # CONFIG_ZRAM_DEBUG is not set
+CONFIG_ZCACHE=y
 # CONFIG_QCACHE is not set
 CONFIG_ZSMALLOC=y
 # CONFIG_FB_SM7XX is not set
@@ -3179,7 +3185,6 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_STRICT_DEVMEM is not set
 CONFIG_ARM_UNWIND=y
 # CONFIG_DEBUG_USER is not set
-# CONFIG_DEBUG_RODATA is not set
 # CONFIG_DEBUG_LL is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 
@@ -3305,7 +3310,7 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 #
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
-# CONFIG_CRYPTO_LZO is not set
+CONFIG_CRYPTO_LZO=y
 
 #
 # Random Number Generation
