--- a/arch/arm/configs/ariesve_defconfig
+++ b/arch/arm/configs/ariesve_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.61 Kernel Configuration
+# Linux/arm 3.4.75 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -29,6 +29,7 @@ CONFIG_NEED_MACH_MEMORY_H=y
 CONFIG_PHYS_OFFSET=0x00400000
 CONFIG_GENERIC_BUG=y
 # CONFIG_ARCH_RANDOM is not set
+# CONFIG_GENERIC_TIME_VSYSCALL is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
@@ -533,6 +534,7 @@ CONFIG_ARM_THUMB=y
 # CONFIG_CPU_DCACHE_DISABLE is not set
 # CONFIG_CPU_CACHE_ERR_REPORT is not set
 # CONFIG_CPU_BPREDICT_DISABLE is not set
+CONFIG_KUSER_HELPERS=y
 # CONFIG_CACHE_L2X0 is not set
 CONFIG_ARM_L1_CACHE_SHIFT_6=y
 CONFIG_ARM_L1_CACHE_SHIFT=6
@@ -579,6 +581,7 @@ CONFIG_ARCH_NR_GPIO=0
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
 CONFIG_HZ=100
+CONFIG_SCHED_HRTICK=y
 # CONFIG_THUMB2_KERNEL is not set
 CONFIG_AEABI=y
 # CONFIG_OABI_COMPAT is not set
@@ -605,11 +608,14 @@ CONFIG_VIRT_TO_BUS=y
 CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_NEED_PER_CPU_KM=y
-# CONFIG_CLEANCACHE is not set
+CONFIG_CLEANCACHE=y
+# CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 # CONFIG_ARCH_MEMORY_PROBE is not set
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ENABLE_DMM is not set
 # CONFIG_DONT_MAP_HOLE_AFTER_MEMBANK0 is not set
+CONFIG_ENABLE_VMALLOC_SAVING=y
+# CONFIG_NO_VM_RECLAIM is not set
 CONFIG_HOLES_IN_ZONE=y
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
@@ -2856,6 +2862,11 @@ CONFIG_STAGING=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
+CONFIG_ZRAM=m
+# CONFIG_ZRAM_DEBUG is not set
+CONFIG_ZCACHE=y
+# CONFIG_QCACHE is not set
+CONFIG_ZSMALLOC=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
@@ -2866,6 +2877,7 @@ CONFIG_STAGING=y
 #
 # CONFIG_SPEAKUP is not set
 # CONFIG_TOUCHSCREEN_CLEARPAD_TM1217 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4_STAGING is not set
 # CONFIG_STAGING_MEDIA is not set
 
 #
@@ -2921,13 +2933,13 @@ CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_DPRAM=y
 # CONFIG_ENABLE_TTY_CIQ is not set
 CONFIG_DPRAM_WHITELIST=y
-CONFIG_SENSORS_BMA222_ACCEL=y
-CONFIG_INPUT_BMA222_POSITION=3
 CONFIG_OPTICAL_GP2A=y
 
 #
 # Samsung Galaxy S Plus sensor drivers
 #
+CONFIG_SENSORS_BMA222_ACCEL=y
+CONFIG_INPUT_BMA222_POSITION=3
 CONFIG_SENSORS_YAS529_MAGNETIC=y
 CONFIG_INPUT_YAS529_POSITION=7
 CONFIG_SENSORS_ORIENTATION=y
@@ -3162,7 +3174,6 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_STRICT_DEVMEM is not set
 CONFIG_ARM_UNWIND=y
 # CONFIG_DEBUG_USER is not set
-# CONFIG_DEBUG_RODATA is not set
 # CONFIG_DEBUG_LL is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 
@@ -3272,7 +3283,7 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 #
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
-# CONFIG_CRYPTO_LZO is not set
+CONFIG_CRYPTO_LZO=y
 
 #
 # Random Number Generation
