Update defconfigs to use TUN/TAP and ZRAM as a built-in modules

--- a/arch/arm/configs/ancora_tmo_defconfig
+++ b/arch/arm/configs/ancora_tmo_defconfig
@@ -1322,7 +1322,7 @@ CONFIG_DUMMY=y
 # CONFIG_NETCONSOLE is not set
 # CONFIG_NETPOLL is not set
 # CONFIG_NET_POLL_CONTROLLER is not set
-CONFIG_TUN=m
+CONFIG_TUN=y
 # CONFIG_VETH is not set
 
 #
@@ -2885,7 +2885,7 @@ CONFIG_STAGING=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-CONFIG_ZRAM=m
+CONFIG_ZRAM=y
 # CONFIG_ZRAM_DEBUG is not set
 CONFIG_ZCACHE=y
 # CONFIG_QCACHE is not set
